--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "apexcharts": "^3.27.3",
+    "bootstrap": "^5.0.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
@@ -19,9 +21,6 @@
     "eject": "react-scripts eject",
     "cypress:open": "cypress open"
   },
-
-  
-
   "eslintConfig": {
     "extends": "react-app"
   },
